<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    android:theme="@style/Theme.AppCompat"
    tools:context=".signupactivity">

    <ImageView
        android:layout_width="139dp"
        android:layout_height="125dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_shape_capsule"
        android:text="@string/signupbtn"
        android:fontFamily="@font/convergence"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/name"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/umail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:hint="@string/entermail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/unum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:drawableLeft="@drawable/ic_local_phone_black_24dp"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:hint="@string/number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/psd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/psd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cpsd"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/cpsd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/profressbar1"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="8dp"
        android:text="@string/loginlink"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/convergence"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>