<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    android:theme="@style/Theme.AppCompat"
    tools:context=".MainActivity">

    <!--<pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="wrap_content"
            android:layout_height="202dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    -->

    <Button
        android:id="@+id/startbtn"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_shape_capsule"
        android:elevation="5dp"
        android:fontFamily="@font/convergence"
        android:padding="8dp"
        android:text="@string/go"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/signuptxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <ImageView
        android:layout_width="139dp"
        android:layout_height="125dp"
        android:layout_marginTop="84dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439">

        <EditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/entermail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="#757373"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/otptext"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/hintpsd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="#757373"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb1"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="296dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>